--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "5.45.1",
+    "bignumber.js": "^9.1.2",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
